--- a/财经新闻爬虫API/requirements.txt
+++ b/财经新闻爬虫API/requirements.txt
@@ -1,5 +1,84 @@
-Flask==2.3.3
-requests==2.31.0
-beautifulsoup4==4.12.2
-gunicorn==21.2.0
-lxml==4.9.3
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+akshare==1.18.21
+alembic==1.18.3
+annotated-types==0.7.0
+anyio==4.12.1
+attrs==25.4.0
+beautifulsoup4==4.14.3
+blinker==1.9.0
+bs4==0.0.2
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+contourpy==1.3.3
+curl_cffi==0.13.0
+cycler==0.12.1
+decorator==5.2.1
+distro==1.9.0
+et_xmlfile==2.0.0
+Flask==3.1.2
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+fonttools==4.61.1
+frozendict==2.4.7
+frozenlist==1.8.0
+greenlet==3.3.1
+h11==0.16.0
+html5lib==1.1
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.13.0
+jsonpath==0.82.2
+kiwisolver==1.4.9
+lxml==6.0.2
+Mako==1.3.10
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+mini-racer==0.14.1
+multidict==6.7.1
+multitasking==0.0.12
+numpy==2.4.1
+openai==0.28.1
+openpyxl==3.1.5
+packaging==26.0
+pandas==3.0.0
+peewee==3.19.0
+pillow==12.1.0
+platformdirs==4.5.1
+propcache==0.4.1
+protobuf==6.33.5
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+PyMySQL==1.1.2
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+schedule==1.2.2
+simplejson==3.20.2
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.3
+SQLAlchemy==2.0.46
+tabulate==0.9.0
+tqdm==4.67.2
+tushare==1.4.24
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+webencodings==0.5.1
+websocket-client==1.9.0
+websockets==16.0
+Werkzeug==3.1.5
+xlrd==2.0.2
+yarl==1.22.0
+yfinance==1.1.0
